<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CartActivity">

    <TextView
        android:id="@+id/tvNotFound"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:text="@string/cart_is_empty"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/sp16"
        android:textStyle="bold|italic"
        android:visibility="gone" />

    <TextView
        android:id="@+id/tvVRNOA"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp5"
        android:padding="@dimen/dp5"
        android:text="@string/voucher_no"
        android:textSize="@dimen/sp16"
        android:textStyle="bold"
        android:visibility="visible" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tilPersons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvVRNOA"
        android:layout_margin="@dimen/dp5">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/etPersons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_edit_text"
            android:hint="@string/persons"
            android:inputType="number"
            android:padding="@dimen/dp10"
            android:text="@string/_500"
            android:textSize="@dimen/sp14" />
    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:id="@+id/llIncDecPer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tilPersons"
        android:layout_margin="@dimen/dp5"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/dp5"
            android:text="@string/increment_decrement_percentage" />

        <EditText
            android:id="@+id/etIncDecPercent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp5"
            android:background="@drawable/bg_edit_text"
            android:hint="0.0"
            android:inputType="numberDecimal"
            android:padding="@dimen/dp10"
            android:textSize="@dimen/sp14" />
    </LinearLayout>

    <RadioGroup
        android:id="@+id/rgIncDecPer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/llIncDecPer"
        android:orientation="horizontal"
        android:padding="@dimen/dp5">

        <RadioButton
            android:id="@+id/rbNoIncDec"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:text="@string/no_change" />

        <RadioButton
            android:id="@+id/rbIncPer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/increment" />

        <RadioButton
            android:id="@+id/rbDecPer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/decrement" />
    </RadioGroup>

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_above="@+id/llBtns"
        android:layout_below="@id/rgIncDecPer"
        android:fillViewport="true">

        <HorizontalScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fillViewport="true">

            <RelativeLayout
                android:id="@+id/llScroll"
                android:layout_width="wrap_content"
                android:layout_height="match_parent">

                <LinearLayout
                    android:id="@+id/llHeading"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/colorBlackLight"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:padding="@dimen/dp5">

                    <TextView
                        android:layout_width="@dimen/dp40"
                        android:layout_height="wrap_content"
                        android:text="@string/sr"
                        android:textColor="@color/colorWhite"
                        android:textSize="@dimen/sp16" />

                    <TextView
                        android:layout_width="@dimen/dp150"
                        android:layout_height="wrap_content"
                        android:text="@string/name"
                        android:textColor="@color/colorWhite"
                        android:textSize="@dimen/sp16" />

                    <TextView
                        android:layout_width="@dimen/dp80"
                        android:layout_height="wrap_content"
                        android:text="@string/uom"
                        android:textColor="@color/colorWhite"
                        android:textSize="@dimen/sp16" />

                    <TextView
                        android:layout_width="@dimen/dp120"
                        android:layout_height="wrap_content"
                        android:text="@string/category"
                        android:textColor="@color/colorWhite"
                        android:textSize="@dimen/sp16" />

                    <TextView
                        android:layout_width="@dimen/dp80"
                        android:layout_height="wrap_content"
                        android:gravity="right"
                        android:text="@string/qty"
                        android:textColor="@color/colorWhite"
                        android:textSize="@dimen/sp16" />

                    <TextView
                        android:layout_width="@dimen/dp80"
                        android:layout_height="wrap_content"
                        android:gravity="right"
                        android:text="@string/rate"
                        android:textColor="@color/colorWhite"
                        android:textSize="@dimen/sp16" />

                    <TextView
                        android:layout_width="@dimen/dp80"
                        android:layout_height="wrap_content"
                        android:gravity="right"
                        android:text="@string/mrate"
                        android:textColor="@color/colorWhite"
                        android:textSize="@dimen/sp16" />

                    <TextView
                        android:layout_width="@dimen/dp80"
                        android:layout_height="wrap_content"
                        android:gravity="right"
                        android:text="@string/amount"
                        android:textColor="@color/colorWhite"
                        android:textSize="@dimen/sp16" />

                    <TextView
                        android:layout_width="@dimen/dp60"
                        android:layout_height="wrap_content"
                        android:gravity="right"
                        android:text="@string/per"
                        android:textColor="@color/colorWhite"
                        android:textSize="@dimen/sp16" />

                    <TextView
                        android:layout_width="@dimen/dp80"
                        android:layout_height="wrap_content"
                        android:gravity="right"
                        android:text="@string/weight"
                        android:textColor="@color/colorWhite"
                        android:textSize="@dimen/sp16" />

                </LinearLayout>

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/rvCart"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_above="@+id/llTotal"
                    android:layout_below="@id/llHeading"
                    android:background="#fff">

                </android.support.v7.widget.RecyclerView>

                <LinearLayout
                    android:id="@+id/llTotal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:background="@color/colorBlackLight"
                    android:orientation="horizontal"
                    android:padding="@dimen/dp5"
                    android:visibility="visible">

                    <TextView
                        android:id="@+id/tvTotalSr"
                        android:layout_width="@dimen/dp40"
                        android:layout_height="wrap_content"
                        android:text="@string/_0"
                        android:textColor="@color/colorWhite"
                        android:textSize="@dimen/sp16" />

                    <TextView
                        android:layout_width="@dimen/dp350"
                        android:layout_height="wrap_content"
                        android:gravity="right"
                        android:text="@string/total"
                        android:textColor="@color/colorWhite"
                        android:textSize="@dimen/sp16" />

                    <TextView
                        android:id="@+id/tvTotalQty"
                        android:layout_width="@dimen/dp80"
                        android:layout_height="wrap_content"
                        android:gravity="right"
                        android:text="@string/_0"
                        android:textColor="@color/colorWhite"
                        android:textSize="@dimen/sp16" />

                    <TextView
                        android:id="@+id/tvTotalAmount"
                        android:layout_width="@dimen/dp240"
                        android:layout_height="wrap_content"
                        android:gravity="right"
                        android:text="@string/_0"
                        android:textColor="@color/colorWhite"
                        android:textSize="@dimen/sp16" />

                    <TextView
                        android:id="@+id/tvTotalWeight"
                        android:layout_width="@dimen/dp140"
                        android:layout_height="wrap_content"
                        android:gravity="right"
                        android:text="@string/_0"
                        android:textColor="@color/colorWhite"
                        android:textSize="@dimen/sp16" />

                </LinearLayout>

            </RelativeLayout>
        </HorizontalScrollView>
    </ScrollView>


    <!--
        <android.support.v7.widget.RecyclerView
            android:id="@+id/rvCart"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/rlTotal"
            android:layout_below="@id/rgIncDecPer"
            android:padding="@dimen/dp5"
            android:visibility="gone" />
    -->

    <RelativeLayout
        android:id="@+id/rlTotal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/llBtns"
        android:background="@drawable/bg_edit_text"
        android:padding="@dimen/dp16"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total"
            android:textSize="@dimen/sp16" />

        <TextView
            android:id="@+id/tvTotalPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="@string/_893_000_pkr"
            android:textSize="@dimen/sp16"
            android:textStyle="bold" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/llBtns"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <Button
            android:id="@+id/btnClearCart"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="1dp"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:padding="@dimen/dp5"
            android:text="@string/clear_cart"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/sp16" />

        <Button
            android:id="@+id/btnPrint"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="1dp"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:padding="@dimen/dp5"
            android:text="@string/print"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/sp16" />

        <Button
            android:id="@+id/btnSearch"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="1dp"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:padding="@dimen/dp5"
            android:text="@string/search"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/sp16" />

        <Button
            android:id="@+id/btnSave"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="1dp"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:padding="@dimen/dp5"
            android:text="@string/save"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/sp16" />

        <Button
            android:id="@+id/btnGetEstimate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:padding="@dimen/dp5"
            android:text="@string/get_estimate"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/sp16" />
    </LinearLayout>
</RelativeLayout>
