<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_log_in"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/sign_up_bg_screen"
    tools:context="com.alnehal.chiniotestimator.LogInActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="9"
        android:orientation="vertical"
        android:gravity="center">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:src="@drawable/logo" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tilName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/etUserName"
                android:layout_width="260dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp5"
                android:background="@drawable/user_pass_bg"
                android:hint="@string/user_name"

                android:inputType="text"
                android:padding="@dimen/dp10"
                android:textSize="@dimen/sp14" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tilPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/etPassword"
                android:layout_width="260dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp5"
                android:background="@drawable/user_pass_bg"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="@dimen/dp10"
                android:textSize="@dimen/sp14" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btnLogIn"
            android:layout_width="207dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dp10"
            android:layout_marginLeft="@dimen/dp5"
            android:layout_marginRight="@dimen/dp5"
            android:layout_marginTop="@dimen/dp10"
            android:background="#990000"
            android:text="@string/log_in"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/sp14" />


    </LinearLayout>






    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp" android:orientation="horizontal"
        android:gravity="right"
        android:layout_weight="1">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/powered_by" />
    </LinearLayout>





</LinearLayout>
